--- a/Pertemuan10/src/pertemuan10/fMahasiswa.form
+++ b/Pertemuan10/src/pertemuan10/fMahasiswa.form
@@ -27,38 +27,40 @@
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
+                      <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" attributes="0">
                       <EmptySpace min="6" pref="6" max="-2" attributes="0"/>
                       <Component id="jScrollPane1" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="txNIM" max="32767" attributes="0"/>
                           <Component id="txNAMA" alignment="0" max="32767" attributes="0"/>
                           <Component id="txALAMAT" alignment="0" max="32767" attributes="0"/>
                           <Component id="txJUR" alignment="0" max="32767" attributes="0"/>
                           <Group type="102" attributes="0">
-                              <Group type="103" groupAlignment="0" attributes="0">
+                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                   <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                                   <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
                                   <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
                                   <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
                                   <Group type="102" alignment="0" attributes="0">
-                                      <Component id="cBARU" min="-2" max="-2" attributes="0"/>
+                                      <Component id="cBARU" linkSize="2" min="-2" max="-2" attributes="0"/>
                                       <EmptySpace max="-2" attributes="0"/>
-                                      <Component id="cUBAH" min="-2" max="-2" attributes="0"/>
+                                      <Component id="cUBAH" linkSize="2" min="-2" max="-2" attributes="0"/>
                                       <EmptySpace max="-2" attributes="0"/>
-                                      <Component id="cHAPUS" min="-2" max="-2" attributes="0"/>
+                                      <Component id="cHAPUS" linkSize="2" min="-2" max="-2" attributes="0"/>
                                       <EmptySpace max="-2" attributes="0"/>
-                                      <Component id="cTUTUP" min="-2" max="-2" attributes="0"/>
+                                      <Component id="cTUTUP" linkSize="2" min="-2" pref="84" max="-2" attributes="0"/>
                                   </Group>
+                                  <Component id="cbJUR" alignment="0" max="32767" attributes="0"/>
                               </Group>
-                              <EmptySpace min="0" pref="32" max="32767" attributes="0"/>
+                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                           </Group>
-                          <Component id="cbJUR" alignment="0" max="32767" attributes="0"/>
                       </Group>
                   </Group>
-                  <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -82,18 +84,18 @@
                       <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="txJUR" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="cbJUR" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
                       <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="txALAMAT" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="cbJUR" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="cBARU" alignment="3" min="-2" pref="34" max="-2" attributes="0"/>
-                          <Component id="cUBAH" alignment="3" min="-2" pref="34" max="-2" attributes="0"/>
-                          <Component id="cHAPUS" alignment="3" min="-2" pref="34" max="-2" attributes="0"/>
-                          <Component id="cTUTUP" alignment="3" min="-2" pref="34" max="-2" attributes="0"/>
+                          <Component id="cBARU" linkSize="1" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
+                          <Component id="cUBAH" linkSize="1" alignment="3" min="-2" pref="34" max="-2" attributes="0"/>
+                          <Component id="cHAPUS" linkSize="1" alignment="3" min="-2" pref="34" max="-2" attributes="0"/>
+                          <Component id="cTUTUP" linkSize="1" alignment="3" min="-2" pref="34" max="-2" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
